# vrp-stuff

./: .gitignore  FEASIBILITY_FIRST_TODO.md  README.md  RESEARCH.md  ROADEF_V218_NEXT_PLAN.md  SOLVER_INTEGRATION.md  STOCHASTIC_TODO.md  analyze_b_instance.py  check_roadef_score.py  debug.out  model.lp  probe_edge_cases.py  pyproject.toml  roadef_dashboard.py  robust_batch_results.csv  run_alns_probe.py  scratch.py  setup_fast.py  tank_sawtooth_hourly_fourier.csv  tank_sawtooth_hourly_laplace.csv  tank_sawtooth_laplace.csv
notebooks/: roadef_customer_consumption.ipynb
roadef_2016_data/: hexaly_a_benchmarks.csv  published_best_ratios.csv  rules_index.md
roadef_tools/: __init__.py  alns_state.py  analysis.py  cli.py  contest.py  evaluate.py  geo.py  highs_repair.py  highs_time_opt.py  improve.py  inventory.py  inventory_fast.c  inventory_fast.pyx  model.py  movement.py  penalties.py  replay.py  rolling.py  route_cache.py  rules.py  smoothness.py  xml_io.py
scratch/: analyse_limits.py  print_shifts.py  run_robust_batch.sh
scripts/: analyze_solution_resource_patterns.py  check_roadef_score.py  improve_a_instance_cached.py  official_greedy_improve_a.py  plot_monte_carlo_probe.py  rolling_rescue_1.11.py  rolling_rescue_1.9.py  run_alns_probe.py  run_monte_carlo_probe.py  run_set_a_sweep.py  score_hust_smart_results.py  squeeze_baselines.py  squeeze_remaining.py  tank_sawtooth.py  tank_sawtooth_data.csv  tank_sawtooth_fourier.csv  tank_sawtooth_hourly_data.csv  verify_with_official_checker.py
tests/: test_a_instance_claims.py  test_backtest.py  test_gurobi_selector.py  (+5 more)
(+531 files in other folders)
